--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
+    "bootstrap": "^5.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.0",
     "react-router-dom": "^6.2.1",
